--- a/index.html
+++ b/index.html
@@ -9,7 +9,39 @@
   </head>
   <body>
     <div class="page">
-      
+      <header class="header">
+        <div class="menu">
+          <h1 class="menu__logo">Interia</h1>
+          <nav class="menu__nav">
+            <a class="menu__link" href="#">Home</a>
+            <a class="menu__link" href="#">Pages</a>
+            <a class="menu__link" href="#">Services</a>
+            <a class="menu__link" href="#">Team</a>
+            <a class="menu__link" href="#">Blog</a>
+            <button class="menu__button">
+              Get started
+            </button>
+          </nav>
+        </div>
+        <div class="hero">
+          <div class="hero__info">
+            <h2 class="hero__title">
+              We design your room aesthetic
+            </h2>
+            <p class="hero__description">
+              Here at Interia, we combine aesthetic and comfort
+            </p>
+            <button class="hero__play-button"></button>
+          </div>
+        </div>
+      </header>
+      <main class="content">
+        <section class="about">
+          <h2 class="about__title">
+            We are the best interior design studio in London
+          </h2>
+        </section>
+      </main>
     </div>
   </body>
 </html>
