--- a/index.html
+++ b/index.html
@@ -37,9 +37,46 @@
       </header>
       <main class="content">
         <section class="about">
-          <h2 class="about__title">
-            We are the best interior design studio in London
-          </h2>
+          <div class="about__info">
+            <h3 class="about__subtitle">About</h3>
+            <h2 class="about__title">
+              We are the best interior design studio in London
+            </h2>
+            <p class="about__description">
+              Welcome to our interior design studio, where we transform spaces into personalized sanctuaries, blending creativity and functionality to inspire every client's unique vision.
+            </p>
+          </div>
+          <div class="about__gallery">
+            <div class="about__images">
+              <img class="about__image"
+                src="./images/IMG1.png"
+                alt="interior design example 1"
+              />
+              <img class="about__image"
+                src="./images/IMG2.png"
+                alt="interior design example 2"
+              />
+              <img class="about__image"
+                src="./images/IMG3.png"
+                alt="interior design example 3"
+              />
+            </div>
+            <button class="about__button">Learn about</button>
+            <div class="about__stats">
+              <div class="about__stat">
+                <h4 class="about__number">2k+</h4>
+                Projects done
+              </div>
+              <div class="about__stat">
+                <h4 class="about__number">20+</h4>
+                Pro teams
+              </div>
+              <div class="about__stat">
+                <h4 class="about__number">300+</h4>
+                Global clients
+              </div>
+            </div>
+          </div>
         </section>
       </main>
     </div>
