--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
             </div>
           </div>
         </section>
+        <section class="hire">
+          <img class="hire__image"
+            src="./images/Ellipse 2.png"
+            alt="sofa in a white room"
+          />
+          <div class="hire__info">
+            <h2 class="hire__title">
+              Blending creativity and functionality in every design
+            </h2>
+            <button class="hire__button">
+              Hire us now
+            </button>
+          </div>
+        </section>
       </main>
     </div>
   </body>
