--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </section>
         <section class="hire">
           <img class="hire__image"
-            src="./images/Ellipse 2.png"
+            src="./images/Ellipse 1.png"
             alt="sofa in a white room"
           />
           <div class="hire__info">
@@ -90,6 +90,68 @@
             <button class="hire__button">
               Hire us now
             </button>
+          </div>
+        </section>
+        <section class="teams">
+          <div class="teams__content">
+            <div class="teams__info">
+              <h3 class="teams__subtitle">Teams</h3>
+              <h2 class="teams__title">
+                Projects are handled by professional certified teams
+              </h2>
+              <p class="teams__text">
+                Our teams are diverse groups of passionate creatives, each bringing a unique perspective and expertise to every project.
+                With a collaborative approach, we meticulously craft spaces that reflect our clients' personalities and aspirations.
+              </p>
+              <div class="teams__reviews">
+                <div class="teams__avatars">
+                  <img class="teams__avatar"
+                    src="./images/Ellipse 2.png"
+                    alt="reviewer avatar"
+                  />
+                  <img class="teams__avatar"
+                    src="./images/Ellipse 3.png"
+                    alt="reviewer avatar"
+                  />
+                  <img class="teams__avatar"
+                    src="./images/Ellipse 4.png"
+                    alt="reviewer avatar"
+                  />
+                  <img class="teams__avatar"
+                    src="./images/Ellipse 5.png"
+                    alt="reviewer avatar"
+                  />
+                </div>
+                <div class="teams__rating">
+                  <div class="teams__stars">
+                    <div class="teams__star"></div>
+                    <div class="teams__star"></div>
+                    <div class="teams__star"></div>
+                    <div class="teams__star"></div>
+                    <div class="teams__star teams__star_half"></div>
+                  </div>
+                  (45 reviews)
+                </div>
+                <h3 class="teams__reviews-subtitle">Trusted by customers</h3>
+              </div>
+            </div>
+            <div class="teams__grid">
+              <img class="teams__image"
+                src="./images/team1.png"
+                alt="team lead 1"
+              />
+              <img class="teams__image"
+                src="./images/team2.png"
+                alt="team lead 2"
+              />
+              <button class="teams__button">
+                Our teams
+              </button>
+              <img class="teams__image"
+                src="./images/team3.png"
+                alt="team lead 3"
+              />
+            </div>
           </div>
         </section>
       </main>
