--- a/index.html
+++ b/index.html
@@ -154,6 +154,26 @@
             </div>
           </div>
         </section>
+        <section class="companies">
+          <div class="companies__logos">
+            <img class="companies__logo"
+              src="./images/Logo1.svg"
+              alt="sparta inc logo"
+            />
+            <img class="companies__logo"
+              src="./images/Logo2.svg"
+              alt="allianzy logo"
+            />
+            <img class="companies__logo"
+              src="./images/Logo3.svg"
+              alt="reys ceramics logo"
+            />
+            <img class="companies__logo"
+              src="./images/Logo4.svg"
+              alt="fuda furniture logo"
+            />
+          </div>
+        </section>
       </main>
     </div>
   </body>
