--- a/index.html
+++ b/index.html
@@ -174,6 +174,59 @@
             />
           </div>
         </section>
+        <section class="services">
+          <div class="services__service">
+            <h2 class="services__title">
+              01. Interior design
+            </h2>
+            <div class="services__info">
+              <p class="services__text">
+                Interior design services enhance spaces through thoughtful planning, aesthetic choices, and functional solutions tailored to clients' needs and preferences.
+              </p>
+              <button class="services__button">
+                Learn more
+                <img class="services__button-icon"
+                  src="./images/angle-right.svg"
+                  alt="arrow facing right"
+                />
+              </button>
+            </div>
+          </div>
+          <div class="services__service">
+            <h2 class="services__title">
+              02. Furniture design
+            </h2>
+            <div class="services__info">
+              <p class="services__text">
+                Furniture design involves the creative process of conceptualizing and crafting pieces that marry form and function seamlessly.
+              </p>
+              <button class="services__button">
+                Learn more
+                <img class="services__button-icon"
+                  src="./images/angle-right.svg"
+                  alt="arrow facing right"
+                />
+              </button>
+            </div>
+          </div>
+          <div class="services__service">
+            <h2 class="services__title">
+              03. Landscape design
+            </h2>
+            <div class="services__info">
+              <p class="services__text">
+                Landscape design combines artistry and practicality to create outdoor spaces that harmonize with nature, using plants and features to enhance both aesthetics and functionality.
+              </p>
+              <button class="services__button">
+                Learn more
+                <img class="services__button-icon"
+                  src="./images/angle-right.svg"
+                  alt="arrow facing right"
+                />
+              </button>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
   </body>
