--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </header>
       <main class="content">
-        <section class="about">
+        <section class="about" id="about">
           <div class="about__info">
             <h3 class="about__subtitle">About</h3>
             <h2 class="about__title">
@@ -78,7 +78,7 @@
             </div>
           </div>
         </section>
-        <section class="hire">
+        <section class="hire" id="hire">
           <img class="hire__image"
             src="./images/Ellipse 1.png"
             alt="sofa in a white room"
@@ -92,7 +92,7 @@
             </button>
           </div>
         </section>
-        <section class="teams">
+        <section class="teams" id="teams">
           <div class="teams__content">
             <div class="teams__info">
               <h3 class="teams__subtitle">Teams</h3>
@@ -154,7 +154,7 @@
             </div>
           </div>
         </section>
-        <section class="companies">
+        <section class="companies" id="companies">
           <div class="companies__logos">
             <img class="companies__logo"
               src="./images/Logo1.svg"
@@ -174,7 +174,7 @@
             />
           </div>
         </section>
-        <section class="services">
+        <section class="services" id="services">
           <div class="services__service">
             <h2 class="services__title">
               01. Interior design
@@ -226,6 +226,24 @@
               </button>
             </div>
           </div>
+        </section>
+        <section class="gallery" id="gallery">
+          <img class="gallery__image"
+            src="./images/IMG2.png"
+            alt="interior design example 1"
+          />
+          <img class="gallery__image"
+            src="./images/IMG3.png"
+            alt="interior design example 2"
+          />
+          <img class="gallery__image"
+            src="./images/IMG4.png"
+            alt="interior design example 3"
+          />
+          <img class="gallery__image"
+            src="./images/IMG5.png"
+            alt="interior design example 4"
+          />
         </section>
       </main>
     </div>
