--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                 alt="interior design example 1"
               />
               <img class="about__image"
-                src="./images/IMG2.png"
+                src="./images/IMG7.png"
                 alt="interior design example 2"
               />
               <img class="about__image"
-                src="./images/IMG3.png"
+                src="./images/IMG6.png"
                 alt="interior design example 3"
               />
             </div>
@@ -244,6 +244,10 @@
             src="./images/IMG5.png"
             alt="interior design example 4"
           />
+        </section>
+        <section class="blog" id="blog">
+          <h3 class="blog__subtitle">Blog</h3>
+          <h2 class="blog__title">The latest articles</h2>
         </section>
       </main>
     </div>
