--- a/index.html
+++ b/index.html
@@ -248,6 +248,61 @@
         <section class="blog" id="blog">
           <h3 class="blog__subtitle">Blog</h3>
           <h2 class="blog__title">The latest articles</h2>
+          <div class="blog__articles">
+            <div class="article">
+              <img class="article__image"
+                src="./images/blog 1.png"
+                alt="bedroom design"
+              />
+              <div class="article__info">
+                <p class="article__text">
+                  Unlock the secrets to transforming your bedroom into a serene retreat with these expert design tips.
+                </p>
+                <button class="article__button">
+                  Learn more
+                  <img class="article__button-icon"
+                    src="./images/angle-right.svg"
+                    alt="arrow facing right"
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="article">
+              <img class="article__image"
+                src="./images/blog 2.png"
+                alt="light design"
+              />
+              <div class="article__info">
+                <p class="article__text">
+                  Discover how thoughtful light can elevate your space, blending functionality with ambiance for a truly illuminated environment.
+                </p>
+                <button class="article__button">
+                  Learn more
+                  <img class="article__button-icon"
+                    src="./images/angle-right.svg"
+                    alt="arrow facing right"
+                  />
+                </button>
+              </div>
+            </div>
+            <div class="article">
+              <img class="article__image"
+                src="./images/blog 3.png"
+                alt="kitchen design"
+              />
+              <div class="article__info">
+                <p class="article__text">
+                  Explore the art of kitchen design, where functionality meets style to create spaces that inspire culinary creativity and seamless living.
+                </p>
+                <button class="article__button">
+                  Learn more
+                  <img class="article__button-icon"
+                    src="./images/angle-right.svg"
+                    alt="arrow facing right"
+                  />
+                </button>
+              </div>
+          </div>
         </section>
       </main>
     </div>
