--- a/index.html
+++ b/index.html
@@ -304,6 +304,16 @@
               </div>
           </div>
         </section>
+        <section class="newsletter" id="newsletter">
+          <h2 class="newsletter__title">Newsletter</h2>
+          <input class="newsletter__input"
+            type="email"
+            placeholder="Enter your email"
+          />
+          <button class="newsletter__button" type="submit">
+            Subscribe
+          </button>
+        </section>
       </main>
     </div>
   </body>
