--- a/index.html
+++ b/index.html
@@ -314,6 +314,52 @@
             Subscribe
           </button>
         </section>
+        <section class="contacts" id="contacts">
+          <div class="contacts__content">
+            <div class="contacts__menu">
+              <div class="contacts__links">
+                <a class="contacts__link" href="#">Home</a>
+                <a class="contacts__link" href="#">Pages</a>
+                <a class="contacts__link" href="#">Services</a>
+                <a class="contacts__link" href="#">Team</a>
+                <a class="contacts__link" href="#">Blog</a>
+                <a class="contacts__link" href="#">Contact</a>
+              </div>
+              <h1 class="contacts__logo">Interia</h1>
+            </div>
+            <div class="contacts__bottom">
+              <div class="contacts__socials">
+                <button class="contacts__social">
+                  <img class="contacts__social-icon"
+                    src="./images/Facebook.svg"
+                    alt="Facebook"
+                  />
+                </button>
+                <button class="contacts__social">
+                  <img class="contacts__social-icon"
+                    src="./images/Twitter.svg"
+                    alt="Twitter"
+                  />
+                </button>
+                <button class="contacts__social">
+                  <img class="contacts__social-icon"
+                    src="./images/Linkedin.svg"
+                    alt="Linkedin"
+                  />
+                </button>
+                <button class="contacts__social">
+                  <img class="contacts__social-icon"
+                    src="./images/Instagram.svg"
+                    alt="Instagram"
+                  />
+                </button>
+              </div>
+              <p class="contacts__text">
+                Here at Interia design studio, we combine aesthetic and comfort, tailoring the interior design to your needs.
+              </p>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
   </body>
