--- a/index.html
+++ b/index.html
@@ -361,6 +361,15 @@
           </div>
         </section>
       </main>
+      <footer class="footer">
+        <p class="footer__copyright">
+          © Design by AltDesain-Studio, made by YuRo711. All rights reserved.
+        </p>
+        <div class="footer__links">
+          <a class="footer__link" href="#">Terms</a>
+          <a class="footer__link" href="#">Privacy</a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
