--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           </nav>
         </div>
         <div class="hero">
+          <a class="hero__scroll" href="#about">Swipe down</a>
           <div class="hero__info">
             <h2 class="hero__title">
               We design your room aesthetic
